завершена страница просмотра лицензий по сайтам

--- a/my_app/templates/my_app/menu.html
+++ b/my_app/templates/my_app/menu.html
@@ -12,8 +12,8 @@
         <a class="btn btn-outline-primary" role="button" href="/admin">
             <p align="left">Перейти в админку</p>
         </a>
-        <a class="btn btn-outline-primary" role="button" href="#">
-            <p align="left">Кнопка</p>
+        <a class="btn btn-outline-primary" role="button" href="{% url 'view_licenses' %}">
+            <p align="left">Просмотр лицензий по сайтам</p>
         </a>
         <a class="btn btn-outline-primary" role="button" href="#">
             <p align="left">Кнопка</p>
