--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
 
 <!-- Option 2: Separate Popper and Bootstrap JS -->
 <!--
