--- a/Licenseservers/templates/Licenseservers/licenseservers_list.html
+++ b/Licenseservers/templates/Licenseservers/licenseservers_list.html
@@ -4,19 +4,19 @@
 
 {% block body %}
     <div class="row">
-    <h2>
-        Сейчас выбран сайт:
-        {% if select_site == 'on' %}
-        all
-        {% else %}
-        {{ select_site }}
-        {% endif %}
-    </h2><br><br><br>
+        <h2>
+            Сейчас выбран сайт:
+            {% if select_site == 'on' %}
+                all
+            {% else %}
+                {{ select_site }}
+            {% endif %}
+        </h2><br><br><br>
         <div class="col-sm-2">
             <h3>Показать:</h3>
 
             <form action="{% url 'view_licenses' %}" method="get">
-            {{ form.as_p }}
+                {{ form.as_p }}
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="all" value="all">
                     <label class="form-check-label">
@@ -26,7 +26,8 @@
 
                 {% for site in sites %}
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="{{ site }}" value="{{ site }}">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="{{ site }}"
+                               value="{{ site }}">
                         <label class="form-check-label">
                             {{ site }}
                         </label>
