--- a/my_app/templates/my_app/menu.html
+++ b/my_app/templates/my_app/menu.html
@@ -2,8 +2,9 @@
 
 {% block title %}Меню{% endblock %}
 
-{% block body %}
+{% block return %}{% endblock %}
 
+{% block body %}
     <div class="d-grid gap-2">
         <button class="btn btn-primary" type="button" disabled>
             <p align="left">Выберите нужное:</p>
