страница просмотра готовых лицензий готова

--- a/my_app/templates/my_app/menu.html
+++ b/my_app/templates/my_app/menu.html
@@ -16,8 +16,8 @@
         <a class="btn btn-outline-primary" role="button" href="{% url 'view_licenses' %}">
             <p align="left">Просмотр лицензий по сайтам</p>
         </a>
-        <a class="btn btn-outline-primary" role="button" href="#">
-            <p align="left">Кнопка</p>
+        <a class="btn btn-outline-primary" role="button" href="{% url 'view_free_licenses' %}">
+            <p align="left">Посмотреть свободные лицензии</p>
         </a>
         <a class="btn btn-outline-primary" role="button" href="#">
             <p align="left">Кнопка</p>
