добавлена страница информации о пользователях

--- a/my_app/templates/my_app/menu.html
+++ b/my_app/templates/my_app/menu.html
@@ -19,8 +19,8 @@
         <a class="btn btn-outline-primary" role="button" href="{% url 'view_free_licenses' %}">
             <p align="left">Посмотреть свободные лицензии</p>
         </a>
-        <a class="btn btn-outline-primary" role="button" href="#">
-            <p align="left">Кнопка</p>
+        <a class="btn btn-outline-primary" role="button" href="{% url 'view_user_table' %}">
+            <p align="left">Посмотреть сводную таблицу пользователей</p>
         </a>
         <a class="btn btn-outline-primary" role="button" href="#">
             <p align="left">Кнопка</p>
