--- a/my_app/templates/my_app/menu.html
+++ b/my_app/templates/my_app/menu.html
@@ -13,14 +13,22 @@
         <a class="btn btn-outline-primary" role="button" href="/admin">
             <p align="left">Перейти в админку</p>
         </a>
+        <br>
         <a class="btn btn-outline-primary" role="button" href="{% url 'view_licenses' %}">
             <p align="left">Просмотр лицензий по сайтам</p>
         </a>
         <a class="btn btn-outline-primary" role="button" href="{% url 'view_free_licenses' %}">
             <p align="left">Посмотреть свободные лицензии</p>
         </a>
+        <br>
         <a class="btn btn-outline-primary" role="button" href="{% url 'view_user_table' %}">
             <p align="left">Посмотреть сводную таблицу пользователей</p>
+        </a>
+        <a class="btn btn-outline-primary" role="button" href="{% url 'adding_orders' %}">
+            <p align="left">Обработка заявок</p>
+        </a>
+        <a class="btn btn-outline-primary" role="button" href="#">
+            <p align="left">Кнопка</p>
         </a>
         <a class="btn btn-outline-primary" role="button" href="#">
             <p align="left">Кнопка</p>
